--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,12 +6,7 @@
     "[typescript]": {
         "editor.formatOnSave": false
     },
-    "eslint.autoFixOnSave": true,
-    "eslint.validate": [
-        "javascript",
-        {
-            "language": "typescript",
-            "autoFix": true
-        },
-    ],
+    "editor.codeActionsOnSave": {
+        "source.fixAll.eslint": true
+    },
 }
